// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statefulExample compiles 1`] = `
Object {
  "declarations": Array [
    Object {
      "id": Object {
        "name": "App",
        "type": "Identifier",
      },
      "init": Object {
        "async": false,
        "body": Object {
          "body": Array [
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "valueKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "value",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "targetKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "target",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "listKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "list",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "currentKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "current",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "doneKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "done",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "falseKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "false",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "defaultCurrent",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "textKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "text",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "defaultState",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "extra": Object {
                      "parenStart": 0,
                      "parenthesized": true,
                    },
                    "loc": undefined,
                    "properties": Array [
                      Object {
                        "computed": false,
                        "key": Object {
                          "extra": Object {
                            "raw": "\\"list\\"",
                            "rawValue": "list",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "list",
                        },
                        "loc": undefined,
                        "shorthand": false,
                        "type": "ObjectProperty",
                        "value": Object {
                          "elements": Array [],
                          "loc": undefined,
                          "type": "ArrayExpression",
                        },
                      },
                      Object {
                        "computed": false,
                        "key": Object {
                          "extra": Object {
                            "raw": "\\"current\\"",
                            "rawValue": "current",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "current",
                        },
                        "loc": undefined,
                        "shorthand": false,
                        "type": "ObjectProperty",
                        "value": Object {
                          "extra": Object {
                            "raw": "\\"\\"",
                            "rawValue": "",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "",
                        },
                      },
                    ],
                    "type": "ObjectExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "submitLabel",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "Submit",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "theme",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "extra": Object {
                      "parenStart": 0,
                      "parenthesized": true,
                    },
                    "loc": undefined,
                    "properties": Array [
                      Object {
                        "computed": false,
                        "key": Object {
                          "extra": Object {
                            "raw": "\\"textColor\\"",
                            "rawValue": "textColor",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "textColor",
                        },
                        "loc": undefined,
                        "shorthand": false,
                        "type": "ObjectProperty",
                        "value": Object {
                          "extra": Object {
                            "raw": "\\"red\\"",
                            "rawValue": "red",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "red",
                        },
                      },
                    ],
                    "type": "ObjectExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "getValueFromEvent",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "name": "event",
                              "type": "Identifier",
                            },
                          ],
                          "callee": Object {
                            "arguments": Array [
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "currentKey",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "objectOf",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "valueKey",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "get",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "targetKey",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "get",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                            ],
                            "callee": Object {
                              "name": "compose",
                              "type": "Identifier",
                            },
                            "type": "CallExpression",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "addTodo",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "name": "event",
                              "type": "Identifier",
                            },
                          ],
                          "callee": Object {
                            "arguments": Array [
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "listKey",
                                    "type": "Identifier",
                                  },
                                  Object {
                                    "arguments": Array [
                                      Object {
                                        "arguments": Array [
                                          Object {
                                            "name": "doneKey",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "name": "falseKey",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "arguments": Array [
                                              Object {
                                                "name": "textKey",
                                                "type": "Identifier",
                                              },
                                              Object {
                                                "arguments": Array [
                                                  Object {
                                                    "name": "currentKey",
                                                    "type": "Identifier",
                                                  },
                                                  Object {
                                                    "name": "state",
                                                    "type": "Identifier",
                                                  },
                                                ],
                                                "callee": Object {
                                                  "name": "get",
                                                  "type": "Identifier",
                                                },
                                                "type": "CallExpression",
                                              },
                                            ],
                                            "callee": Object {
                                              "name": "objectOf",
                                              "type": "Identifier",
                                            },
                                            "type": "CallExpression",
                                          },
                                        ],
                                        "callee": Object {
                                          "name": "set",
                                          "type": "Identifier",
                                        },
                                        "type": "CallExpression",
                                      },
                                      Object {
                                        "arguments": Array [
                                          Object {
                                            "name": "listKey",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "name": "state",
                                            "type": "Identifier",
                                          },
                                        ],
                                        "callee": Object {
                                          "name": "get",
                                          "type": "Identifier",
                                        },
                                        "type": "CallExpression",
                                      },
                                    ],
                                    "callee": Object {
                                      "name": "append",
                                      "type": "Identifier",
                                    },
                                    "type": "CallExpression",
                                  },
                                ],
                                "callee": Object {
                                  "name": "set",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "currentKey",
                                    "type": "Identifier",
                                  },
                                  Object {
                                    "name": "defaultCurrent",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "set",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "state",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "constant",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                            ],
                            "callee": Object {
                              "name": "compose",
                              "type": "Identifier",
                            },
                            "type": "CallExpression",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "elements": Array [
                      Object {
                        "name": "state",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "setState",
                        "type": "Identifier",
                      },
                    ],
                    "type": "ArrayPattern",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "defaultState",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "useState",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "handleCurrentChange",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "properties": Array [
                                Object {
                                  "argument": Object {
                                    "name": "state",
                                    "type": "Identifier",
                                  },
                                  "type": "SpreadElement",
                                },
                                Object {
                                  "argument": Object {
                                    "arguments": Array [
                                      Object {
                                        "name": "event",
                                        "type": "Identifier",
                                      },
                                      Object {
                                        "name": "state",
                                        "type": "Identifier",
                                      },
                                    ],
                                    "callee": Object {
                                      "name": "getValueFromEvent",
                                      "type": "Identifier",
                                    },
                                    "type": "CallExpression",
                                  },
                                  "type": "SpreadElement",
                                },
                              ],
                              "type": "ObjectExpression",
                            },
                          ],
                          "callee": Object {
                            "name": "setState",
                            "type": "Identifier",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                          Object {
                            "name": "getValueFromEvent",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "updateClick",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "properties": Array [
                                Object {
                                  "argument": Object {
                                    "name": "state",
                                    "type": "Identifier",
                                  },
                                  "type": "SpreadElement",
                                },
                                Object {
                                  "argument": Object {
                                    "arguments": Array [
                                      Object {
                                        "name": "event",
                                        "type": "Identifier",
                                      },
                                      Object {
                                        "name": "state",
                                        "type": "Identifier",
                                      },
                                    ],
                                    "callee": Object {
                                      "name": "addTodo",
                                      "type": "Identifier",
                                    },
                                    "type": "CallExpression",
                                  },
                                  "type": "SpreadElement",
                                },
                              ],
                              "type": "ObjectExpression",
                            },
                          ],
                          "callee": Object {
                            "name": "setState",
                            "type": "Identifier",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                          Object {
                            "name": "addTodo",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "list",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "listKey",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "state",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "get",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "value",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "currentKey",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "state",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "get",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "expression": Object {
                "arguments": Array [
                  Object {
                    "async": false,
                    "body": Object {
                      "body": Array [
                        Object {
                          "expression": Object {
                            "arguments": Array [
                              Object {
                                "name": "list",
                                "type": "Identifier",
                              },
                              Object {
                                "name": "noop",
                                "type": "Identifier",
                              },
                            ],
                            "callee": Object {
                              "name": "log",
                              "type": "Identifier",
                            },
                            "type": "CallExpression",
                          },
                          "type": "ExpressionStatement",
                        },
                      ],
                      "directives": Array [],
                      "type": "BlockStatement",
                    },
                    "params": Array [],
                    "type": "ArrowFunctionExpression",
                  },
                  Object {
                    "elements": Array [
                      Object {
                        "name": "list",
                        "type": "Identifier",
                      },
                    ],
                    "type": "ArrayExpression",
                  },
                ],
                "callee": Object {
                  "name": "useEffect",
                  "type": "Identifier",
                },
                "type": "CallExpression",
              },
              "type": "ExpressionStatement",
            },
            Object {
              "argument": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "closingElement": null,
                        "openingElement": Object {
                          "attributes": Array [
                            Object {
                              "name": Object {
                                "name": "onChange",
                                "type": "JSXIdentifier",
                              },
                              "type": "JSXAttribute",
                              "value": Object {
                                "expression": Object {
                                  "name": "handleCurrentChange",
                                  "type": "Identifier",
                                },
                                "type": "JSXExpressionContainer",
                              },
                            },
                            Object {
                              "name": Object {
                                "name": "value",
                                "type": "JSXIdentifier",
                              },
                              "type": "JSXAttribute",
                              "value": Object {
                                "expression": Object {
                                  "name": "value",
                                  "type": "Identifier",
                                },
                                "type": "JSXExpressionContainer",
                              },
                            },
                          ],
                          "name": Object {
                            "name": "input",
                            "type": "JSXIdentifier",
                          },
                          "selfClosing": true,
                          "type": "JSXOpeningElement",
                        },
                        "selfClosing": true,
                        "type": "JSXElement",
                      },
                      Object {
                        "children": Array [
                          Object {
                            "expression": Object {
                              "name": "submitLabel",
                              "type": "Identifier",
                            },
                            "type": "JSXExpressionContainer",
                          },
                        ],
                        "closingElement": Object {
                          "name": Object {
                            "name": "button",
                            "type": "JSXIdentifier",
                          },
                          "type": "JSXClosingElement",
                        },
                        "openingElement": Object {
                          "attributes": Array [
                            Object {
                              "name": Object {
                                "name": "onClick",
                                "type": "JSXIdentifier",
                              },
                              "type": "JSXAttribute",
                              "value": Object {
                                "expression": Object {
                                  "name": "updateClick",
                                  "type": "Identifier",
                                },
                                "type": "JSXExpressionContainer",
                              },
                            },
                          ],
                          "name": Object {
                            "name": "button",
                            "type": "JSXIdentifier",
                          },
                          "selfClosing": false,
                          "type": "JSXOpeningElement",
                        },
                        "selfClosing": false,
                        "type": "JSXElement",
                      },
                      Object {
                        "children": Array [
                          Object {
                            "expression": Object {
                              "arguments": Array [
                                Object {
                                  "name": "TodoItem",
                                  "type": "Identifier",
                                },
                                Object {
                                  "name": "list",
                                  "type": "Identifier",
                                },
                              ],
                              "callee": Object {
                                "name": "dynamicNode",
                                "type": "Identifier",
                              },
                              "type": "CallExpression",
                            },
                            "type": "JSXExpressionContainer",
                          },
                        ],
                        "closingElement": Object {
                          "name": Object {
                            "name": "ul",
                            "type": "JSXIdentifier",
                          },
                          "type": "JSXClosingElement",
                        },
                        "openingElement": Object {
                          "attributes": Array [],
                          "name": Object {
                            "name": "ul",
                            "type": "JSXIdentifier",
                          },
                          "selfClosing": false,
                          "type": "JSXOpeningElement",
                        },
                        "selfClosing": false,
                        "type": "JSXElement",
                      },
                    ],
                    "closingFragment": Object {
                      "type": "JSXClosingFragment",
                    },
                    "openingFragment": Object {
                      "type": "JSXOpeningFragment",
                    },
                    "type": "JSXFragment",
                  },
                ],
                "closingElement": Object {
                  "name": Object {
                    "name": "Theme.Provider",
                    "type": "JSXIdentifier",
                  },
                  "type": "JSXClosingElement",
                },
                "openingElement": Object {
                  "attributes": Array [
                    Object {
                      "name": Object {
                        "name": "value",
                        "type": "JSXIdentifier",
                      },
                      "type": "JSXAttribute",
                      "value": Object {
                        "expression": Object {
                          "name": "theme",
                          "type": "Identifier",
                        },
                        "type": "JSXExpressionContainer",
                      },
                    },
                  ],
                  "name": Object {
                    "name": "Theme.Provider",
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "type": "JSXOpeningElement",
                },
                "selfClosing": false,
                "type": "JSXElement",
              },
              "type": "ReturnStatement",
            },
          ],
          "directives": Array [],
          "type": "BlockStatement",
        },
        "params": Array [
          Object {
            "properties": Array [],
            "type": "ObjectPattern",
          },
        ],
        "type": "ArrowFunctionExpression",
      },
      "type": "VariableDeclarator",
    },
  ],
  "kind": "const",
  "type": "VariableDeclaration",
}
`;

exports[`statefulExample generates 1`] = `
"const App = ({}) => {
  const valueKey = \\"value\\";
  const targetKey = \\"target\\";
  const listKey = \\"list\\";
  const currentKey = \\"current\\";
  const doneKey = \\"done\\";
  const falseKey = \\"false\\";
  const defaultCurrent = \\"\\";
  const textKey = \\"text\\";
  const defaultState = {
    \\"list\\": [],
    \\"current\\": \\"\\"
  };
  const submitLabel = \\"Submit\\";
  const theme = {
    \\"textColor\\": \\"red\\"
  };
  const getValueFromEvent = useCallback((event, state) => compose(objectOf(currentKey), get(valueKey), get(targetKey))(event), []);
  const addTodo = useCallback((event, state) => compose(set(listKey, append(set(doneKey, falseKey, objectOf(textKey, get(currentKey, state))), get(listKey, state))), set(currentKey, defaultCurrent), constant(state))(event), []);
  const [state, setState] = useState(defaultState);
  const handleCurrentChange = useCallback(event => setState({ ...state,
    ...getValueFromEvent(event, state)
  }), [state, getValueFromEvent]);
  const updateClick = useCallback(event => setState({ ...state,
    ...addTodo(event, state)
  }), [state, addTodo]);
  const list = get(listKey, state);
  const value = get(currentKey, state);
  useEffect(() => {
    log(list, noop);
  }, [list]);
  return <Theme.Provider value={theme}><><input onChange={handleCurrentChange} value={value} /><button onClick={updateClick}>{submitLabel}</button><ul>{dynamicNode(TodoItem, list)}</ul></></Theme.Provider>;
};"
`;

exports[`statefulExample generates 2`] = `
"const TodoItem = ({
  done: done,
  text: text
}) => {
  const emptyObject = {};
  const theUndefined = undefined;
  const textColorKey = \\"textColor\\";
  const colorKey = \\"color\\";
  const theme = useContext(Theme);
  const checkedProps = when(done, emptyObject, theUndefined);
  const textColor = get(textColorKey, theme);
  const style = objectOf(colorKey, textColor);
  return <><li style={style}>{text}{dynamicNode(Checkmark, checkedProps)}</li></>;
};"
`;

exports[`statefulExample generates 3`] = `
"const Checkmark = ({}) => {
  const width = 20;
  const height = 20;
  const path = \\"M0,5 L0,5 L5,10 L10,0 Z\\";
  const noneFill = \\"none\\";
  const strokeWidth = \\"1px\\";
  const stroke = \\"black\\";
  return <><svg width={width} height={height}><path fill={noneFill} strokeWidth={strokeWidth} stroke={stroke} d={path} /></svg></>;
};"
`;

exports[`statefulExample generates 4`] = `
"const Theme = createContext({
  \\"textColor\\": \\"green\\"
});"
`;

exports[`staticExample compiles 1`] = `
Object {
  "declarations": Array [
    Object {
      "id": Object {
        "name": "Button",
        "type": "Identifier",
      },
      "init": Object {
        "async": false,
        "body": Object {
          "body": Array [
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "hello",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "Hello",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "world",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "World",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "label",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "hello",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "world",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "concat",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "argument": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "expression": Object {
                          "name": "label",
                          "type": "Identifier",
                        },
                        "type": "JSXExpressionContainer",
                      },
                    ],
                    "closingElement": Object {
                      "name": Object {
                        "name": "div",
                        "type": "JSXIdentifier",
                      },
                      "type": "JSXClosingElement",
                    },
                    "openingElement": Object {
                      "attributes": Array [],
                      "name": Object {
                        "name": "div",
                        "type": "JSXIdentifier",
                      },
                      "selfClosing": false,
                      "type": "JSXOpeningElement",
                    },
                    "selfClosing": false,
                    "type": "JSXElement",
                  },
                ],
                "closingFragment": Object {
                  "type": "JSXClosingFragment",
                },
                "openingFragment": Object {
                  "type": "JSXOpeningFragment",
                },
                "type": "JSXFragment",
              },
              "type": "ReturnStatement",
            },
          ],
          "directives": Array [],
          "type": "BlockStatement",
        },
        "params": Array [
          Object {
            "properties": Array [
              Object {
                "computed": false,
                "decorators": null,
                "key": Object {
                  "name": "onClick",
                  "type": "Identifier",
                },
                "shorthand": false,
                "type": "ObjectProperty",
                "value": Object {
                  "name": "onClick",
                  "type": "Identifier",
                },
              },
            ],
            "type": "ObjectPattern",
          },
        ],
        "type": "ArrowFunctionExpression",
      },
      "type": "VariableDeclarator",
    },
  ],
  "kind": "const",
  "type": "VariableDeclaration",
}
`;

exports[`staticExample generates 1`] = `
"const Button = ({
  onClick: onClick
}) => {
  const hello = \\"Hello\\";
  const world = \\"World\\";
  const label = concat(hello, world);
  return <><div>{label}</div></>;
};"
`;
